{
  "version": 4,
  "terraform_version": "1.7.1",
  "serial": 103,
  "lineage": "a7b3adb7-7b7e-58b7-02b7-c34943f5fd62",
  "resources": [
    {
      "module": "module.Elastic_IP[\"eip-preprod-nat-prod-a\"]",
      "mode": "managed",
      "type": "aws_eip",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f2e1a4999b43da86",
            "association_id": "eipassoc-0c86481429a960c86",
            "domain": "vpc",
            "id": "eipalloc-0f2e1a4999b43da86",
            "network_border_group": "eu-south-2",
            "network_interface": "eni-0302dc98449fb5200",
            "private_dns": "ip-10-120-223-34.eu-south-2.compute.internal",
            "private_ip": "10.120.223.34",
            "public_dns": "ec2-18-101-171-0.eu-south-2.compute.amazonaws.com",
            "public_ip": "18.101.171.0",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "eip-preprod-nat-prod-a"
            },
            "tags_all": {
              "Name": "eip-preprod-nat-prod-a"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.Internet_Gateway[\"igw-preprod\"]",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-south-2:105054799343:internet-gateway/igw-05af54184720be16c",
            "id": "igw-05af54184720be16c",
            "owner_id": "105054799343",
            "tags": {
              "Name": "igw-preprod"
            },
            "tags_all": {
              "Name": "igw-preprod"
            },
            "vpc_id": "vpc-08c295bc35450b718"
          },
          "dependencies": [
            "module.VPC.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.NAT_Gateway[\"nat-preprod-pvt-a\"]",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f2e1a4999b43da86",
            "association_id": "eipassoc-0c86481429a960c86",
            "connectivity_type": "public",
            "id": "nat-0ab2add7740dec217",
            "network_interface_id": "eni-0302dc98449fb5200",
            "private_ip": "10.120.223.34",
            "public_ip": "18.101.171.0",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0d657ef394aea06cf",
            "tags": {
              "Name": "nat-preprod-pvt-a"
            },
            "tags_all": {
              "Name": "nat-preprod-pvt-a"
            }
          },
          "dependencies": [
            "module.Elastic_IP.aws_eip.this",
            "module.Public_Subnets.aws_subnet.this",
            "module.VPC.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.Private_Subnets[\"subnet-preprod-pvt-a\"]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-south-2:105054799343:subnet/subnet-0b89e46f7de010471",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-south-2a",
            "availability_zone_id": "eus2-az1",
            "cidr_block": "10.120.220.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b89e46f7de010471",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "105054799343",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet-preprod-pvt-a"
            },
            "tags_all": {
              "Name": "subnet-preprod-pvt-a"
            },
            "vpc_id": "vpc-08c295bc35450b718"
          },
          "dependencies": [
            "module.VPC.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.Private_Subnets[\"subnet-preprod-pvt-b\"]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-south-2:105054799343:subnet/subnet-02f4f10190eda1ac3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-south-2b",
            "availability_zone_id": "eus2-az2",
            "cidr_block": "10.120.221.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02f4f10190eda1ac3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "105054799343",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet-preprod-pvt-b"
            },
            "tags_all": {
              "Name": "subnet-preprod-pvt-b"
            },
            "vpc_id": "vpc-08c295bc35450b718"
          },
          "dependencies": [
            "module.VPC.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.Private_Subnets[\"subnet-preprod-pvt-c\"]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-south-2:105054799343:subnet/subnet-05fa0f940b284e1d8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-south-2c",
            "availability_zone_id": "eus2-az3",
            "cidr_block": "10.120.222.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05fa0f940b284e1d8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "105054799343",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet-preprod-pvt-c"
            },
            "tags_all": {
              "Name": "subnet-preprod-pvt-c"
            },
            "vpc_id": "vpc-08c295bc35450b718"
          },
          "dependencies": [
            "module.VPC.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.Public_Subnets[\"subnet-preprod-pub-a\"]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-south-2:105054799343:subnet/subnet-0d657ef394aea06cf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-south-2a",
            "availability_zone_id": "eus2-az1",
            "cidr_block": "10.120.223.0/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d657ef394aea06cf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "105054799343",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet-preprod-pub-a"
            },
            "tags_all": {
              "Name": "subnet-preprod-pub-a"
            },
            "vpc_id": "vpc-08c295bc35450b718"
          },
          "dependencies": [
            "module.VPC.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.Route_Table[\"rtbl-preprod-pub-subnets\"]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-south-2:105054799343:route-table/rtb-0e019ef72503f0fef",
            "id": "rtb-0e019ef72503f0fef",
            "owner_id": "105054799343",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05af54184720be16c",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rtbl-preprod-pub-subnets"
            },
            "tags_all": {
              "Name": "rtbl-preprod-pub-subnets"
            },
            "timeouts": null,
            "vpc_id": "vpc-08c295bc35450b718"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.Route_Table[\"rtbl-preprod-pvt-subnets\"]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-south-2:105054799343:route-table/rtb-05cec7ab5c55a0a43",
            "id": "rtb-05cec7ab5c55a0a43",
            "owner_id": "105054799343",
            "propagating_vgws": [
              "vgw-0dd89390bb8418984"
            ],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0ab2add7740dec217",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rtbl-preprod-pvt-subnets"
            },
            "tags_all": {
              "Name": "rtbl-preprod-pvt-subnets"
            },
            "timeouts": null,
            "vpc_id": "vpc-08c295bc35450b718"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.SG-EKS[\"sg_cluster_eks\"]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-south-2:105054799343:security-group/sg-0c8830d804f574af5",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c8830d804f574af5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Security group Cluster EKS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "terraform-20240130170152589400000001",
            "name_prefix": "terraform-",
            "owner_id": "105054799343",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg_cluster_eks"
            },
            "tags_all": {
              "Name": "sg_cluster_eks"
            },
            "timeouts": null,
            "vpc_id": "vpc-08c295bc35450b718"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.VPC[\"vpc-preprod\"]",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-south-2:105054799343:vpc/vpc-08c295bc35450b718",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.120.220.0/22",
            "default_network_acl_id": "acl-098bb077e9fccb682",
            "default_route_table_id": "rtb-0e56596264ce59ac9",
            "default_security_group_id": "sg-0375912b9b6ca85f1",
            "dhcp_options_id": "dopt-0d2b39a1cecedc9d0",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-08c295bc35450b718",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e56596264ce59ac9",
            "owner_id": "105054799343",
            "tags": {
              "Name": "vpc-preprod"
            },
            "tags_all": {
              "Name": "vpc-preprod"
            }
          }
        }
      ]
    },
    {
      "module": "module.private_routes[\"rtbl-preprod-pvt-subnets\"]",
      "mode": "managed",
      "type": "aws_route",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-05cec7ab5c55a0a431080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0ab2add7740dec217",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-05cec7ab5c55a0a43",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.Elastic_IP.aws_eip.this",
            "module.NAT_Gateway.aws_nat_gateway.this",
            "module.Public_Subnets.aws_subnet.this",
            "module.Route_Table.aws_route_table.this",
            "module.VPC.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.public_routes[\"rtbl-preprod-pub-subnets\"]",
      "mode": "managed",
      "type": "aws_route",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-05af54184720be16c",
            "id": "r-rtb-0e019ef72503f0fef1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0e019ef72503f0fef",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.Internet_Gateway.aws_internet_gateway.this",
            "module.Route_Table.aws_route_table.this",
            "module.VPC.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.route_table_association_private[\"association_1\"]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02c25fca304ffeee0",
            "route_table_id": "rtb-05cec7ab5c55a0a43",
            "subnet_id": "subnet-0b89e46f7de010471"
          },
          "dependencies": [
            "module.Private_Subnets.aws_subnet.this",
            "module.Route_Table.aws_route_table.this",
            "module.VPC.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.route_table_association_private[\"association_2\"]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ff0e7ad912195f94",
            "route_table_id": "rtb-05cec7ab5c55a0a43",
            "subnet_id": "subnet-02f4f10190eda1ac3"
          },
          "dependencies": [
            "module.Private_Subnets.aws_subnet.this",
            "module.Route_Table.aws_route_table.this",
            "module.VPC.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.route_table_association_private[\"association_3\"]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04fe77b3369afe498",
            "route_table_id": "rtb-05cec7ab5c55a0a43",
            "subnet_id": "subnet-05fa0f940b284e1d8"
          },
          "dependencies": [
            "module.Private_Subnets.aws_subnet.this",
            "module.Route_Table.aws_route_table.this",
            "module.VPC.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.route_table_association_public[\"association_1\"]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0707668d10a97bb6d",
            "route_table_id": "rtb-0e019ef72503f0fef",
            "subnet_id": "subnet-0d657ef394aea06cf"
          },
          "dependencies": [
            "module.Public_Subnets.aws_subnet.this",
            "module.Route_Table.aws_route_table.this",
            "module.VPC.aws_vpc.this"
          ]
        }
      ]
    }
  ]
}